style: add credit footer

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       }
     </style>
   </head>
-  <body class="bg-gray-100 flex items-center justify-center min-h-screen">
-    <div class="bg-white p-8 rounded shadow-md w-full max-w-md">
+  <body class="bg-gray-100 flex flex-col items-center justify-center min-h-screen">
+    <div class="bg-white p-8 rounded shadow-md w-full max-w-md mb-4">
       <h1 class="text-2xl font-bold mb-4">Cek Data NIK</h1>
       <p class="mb-4">
         Nomor Induk Kependudukan (NIK) adalah Nomor Induk Kependudukan (NIK) yang
@@ -30,6 +30,9 @@
         <pre id="result" class="text-gray-700"></pre>
       </div>
     </div>
+    <footer class="text-center text-gray-600">
+      Dibuat dengan ❤️ oleh <a href="https://linkedin.com/in/rpebspramesta">Dhanyrpebs</a>
+    </footer>
   </body>
   <script type="text/javascript" src="parse_nik.js"></script>
   <script>
