style: add title and footer message

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cek Data NIK</title>
+    <title>Cek Data NIK - Dhanyrpebs</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
       pre {
@@ -23,15 +23,16 @@
       </p>
       <div class="mb-4">
         <label for="nik" class="block text-gray-700">NIK</label>
-        <input type="text" id="nik" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm p-2" />
+        <input type="text" id="nik" placeholder="Masukkan NIK Anda" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm p-2" />
       </div>
       <button onclick="parse()" class="w-full bg-indigo-600 text-white p-2 rounded-md hover:bg-indigo-700">Cek</button>
       <div class="mt-4">
         <pre id="result" class="text-gray-700"></pre>
       </div>
+      <p class="text-sm text-gray-500 mt-4">Web Ini Tidak mencuri data apapun dari anda</p>
     </div>
     <footer class="text-center text-gray-600">
-      Dibuat dengan ❤️ oleh <a href="https://linkedin.com/in/rpebspramesta">Dhanyrpebs</a>
+      Dibuat dengan ❤️ oleh Dhanyrpebs
     </footer>
   </body>
   <script type="text/javascript" src="parse_nik.js"></script>
