--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <p class="text-sm text-gray-500 mt-4">Web Ini Tidak mencuri data apapun dari anda</p>
     </div>
     <footer class="text-center text-gray-600">
-      Dibuat dengan ❤️ oleh Dhanyrpebs
+      Dibuat dengan ❤️ oleh ???
     </footer>
   </body>
   <script type="text/javascript" src="parse_nik.js"></script>
